- sperate components and passing data to parent to child component

--- a/Pages/BlazingPizzaList.razor
+++ b/Pages/BlazingPizzaList.razor
@@ -1,5 +1,6 @@
 ﻿@page "/apipizza"
 
+@using BlazingPizzaDemo.Components
 @using BlazingPizzaDemo.Model
 
 @inject HttpClient HttpClient
@@ -13,14 +14,15 @@
         {
             @foreach (var special in specials)
             {
-                <div class="card col-md-3 m-1" style="width: 18rem;height: 23rem;">
+               @*  <div class="card col-md-3 m-1" style="width: 18rem;height: 23rem;">
                     <img src="@special.ImageUrl" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">@special.Name</h5>
                         <p class="card-text text-truncate">@special.Description</p>
                         <a href="#" class="btn btn-primary">@special.GetFormattedBasePrice()</a>
                     </div>
-                </div>
+                </div> *@
+                <PizzaCard special="@special" />
             }
         }
         else
