--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -35,6 +35,12 @@
                 <span class="oi oi-target" aria-hidden="true"></span> Blazing Pizza API
             </NavLink>
         </div>
+
+        @* <div class="nav-item px-3">
+            <NavLink class="nav-link" href="pizza-detail">
+                <span class="oi oi-target" aria-hidden="true"></span> Pizza Detail
+            </NavLink>
+        </div> *@
     </nav>
 </div>
 
